--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.391.0",
+    "@aws-sdk/signature-v4-crt": "^3.391.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "mongoose": "^7.4.3",
     "next": "13.4.16",
     "postcss": "8.4.28",
     "react": "18.2.0",
