--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "lodash": "^4.17.21",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "next": "13.4.16",
